--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>typb.stream</title>
         <link rel="stylesheet" type="text/css" href="index.css">
         <link rel='icon' href='images/favicon.ico' type='image/x-icon'/ >
+        <body background="images/indevbg.JPG">
     </head>
     <body>
         <div class="text">
