--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>typb.stream</title>
-        <link rel="stylesheet" type="text/css" href="../css/index.css">
+        <link rel="stylesheet" type="text/css" href="css/index.css">
         <link rel='icon' href='images/favicon.ico' type='image/x-icon'/ >
     </head>
     <body>
