rick roll update hargharg

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             </center>
         </div>
         <footer class="footer">
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">&copy; Copyright TheYellowPolarBear 2019-2020</a>
+            <a href="https://bit.ly/3dLk7MD">&copy; Copyright TheYellowPolarBear 2019-2020</a>
             <div>
             <ul>
                 <li>
