--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div class="text">
             <center>
                 <h1 class="header">typb.stream is currently under development</h1>
-                <p class="paragraph">Stay tuned for something fantastic!</p>
+                <p class="paragraph">That's a lie, it's not. The website has looked like this for almost a year now. Just click on the copyright or something.</p>
             </center>
         </div>
         <footer class="footer">
