--- a/index.html
+++ b/index.html
@@ -1,38 +1,30 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>typb.stream</title>
+        <title>TheYellowPolarBear</title>
         <link rel="stylesheet" type="text/css" href="css/index.css">
         <link rel='icon' href='images/favicon.ico' type='image/x-icon'/ >
     </head>
     <body>
         <div class="text">
-            <center>
-                <h1 class="header">typb.stream is currently under development</h1>
-                <p class="paragraph">That's a lie, it's not. This website has looked the same for more than a year now. Just click on the copyright or something.</p>
-            </center>
+                <img src="images/typb.png" draggable="false">
+                <br>
+                <div class="images">
+                    <center>
+                        <a href="https://www.youtube.com/theyellowpolarbear">
+                            <img src="images/youtube.png" width="64" height="64">
+                        </a>
+                        <a href="https://www.twitter.com/samuel_typb">
+                            <img src="images/twitter.png" width="64" height="64">
+                        </a>
+                        <a href="https://www.instagram.com/samuel_typb">
+                            <img src="images/instagram.png" width="64" height="64">
+                        </a>
+                        <a href="https://www.instagram.com/theyellowpolarbear">
+                            <img src="images/twitch.png" width="64" height="64">
+                        </a>
+                </center>
+                </div>
         </div>
-        <footer class="footer">
-            <a href="https://bit.ly/3dLk7MD">&copy; Copyright TheYellowPolarBear 2019-2021</a>
-            <div>
-            <ul>
-                <li>
-                    <a href="https://www.youtube.com/theyellowpolarbear">
-                        <img src="images/youtube.png" width="16" height="16">
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.twitter.com/samuel_typb">
-                        <img src="images/twitter.png" width="16" height="16">
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.instagram.com/samuel_typb">
-                        <img src="images/instagram.png" width="16" height="16">
-                    </a>
-                </li>
-        </ul>
-        </div>
-        </footer>
     </body>
 </html>
