fixed twitch link

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <a href="https://www.instagram.com/samuel_typb">
                             <img src="images/instagram.png" width="64" height="64">
                         </a>
-                        <a href="https://www.instagram.com/theyellowpolarbear">
+                        <a href="https://twitch.tv/theyellowpolarbear">
                             <img src="images/twitch.png" width="64" height="64">
                         </a>
                     </center>
