--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <head>
         <title>TheYellowPolarBear</title>
         <link rel="stylesheet" type="text/css" href="css/index.css">
-        <link rel='icon' href='images/favicon.ico' type='image/x-icon'/ >
+        <link rel='icon' href='images/favicon.ico' type='image/x-icon'/>
+        <meta name="description" content="The official website for TheYellowPolarBear">
     </head>
     <body>
         <div class="text">
