--- a/index.html
+++ b/index.html
@@ -7,25 +7,10 @@
         <meta name="description" content="The official website for TheYellowPolarBear">
     </head>
     <body>
-        <div class="text">
-                <img src="images/typb.png" draggable="false">
-                <br>
-                <div class="images">
-                    <center>
-                        <a href="https://www.youtube.com/theyellowpolarbear">
-                            <img src="images/youtube.png" width="64" height="64">
-                        </a>
-                        <a href="https://www.twitter.com/samuel_typb">
-                            <img src="images/twitter.png" width="64" height="64">
-                        </a>
-                        <a href="https://www.instagram.com/samuel_typb">
-                            <img src="images/instagram.png" width="64" height="64">
-                        </a>
-                        <a href="https://twitch.tv/theyellowpolarbear">
-                            <img src="images/twitch.png" width="64" height="64">
-                        </a>
-                    </center>
-                </div>
-        </div>
+        <div class="tim">
+            <a href ="images/made by drex.mp4">
+                <img src="images/tim64.jpg">
+            </a>
+        </div>    
     </body>
 </html>
