--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="tim">
-            <a href ="images/made by drex.mp4">
+            <a href ="images/made by drax.mp4">
                 <img src="images/tim64.jpg">
             </a>
         </div>    
